--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -27,8 +27,7 @@ jobs:
 
       - name: Run Semgrep
         run: |
-          semgrep --config=.semgrep/java-password-sql.yml --json -o semgrep.json || true
-
+            semgrep --config=.semgrep/java-security-rules.yml --json -o semgrep.json || true
       - name: Check Semgrep results
         run: |
           if grep -q '"check_id"' semgrep.json; then
@@ -42,45 +41,46 @@ jobs:
           path: semgrep.json
 
   # 2️⃣ SCA - DEPENDENCY CHECK
-  sca:
-    needs: sast
-    runs-on: ubuntu-latest
-    name: "🧩 SCA - Dependency Check"
-    steps:
-      - uses: actions/checkout@v4
+sca:
+  needs: sast
+  runs-on: ubuntu-latest
+  name: "🧩 SCA - Dependency Check"
+  steps:
+    - uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v4
-        with:
-          java-version: "17"
-          distribution: "temurin"
+    - uses: actions/setup-java@v4
+      with:
+        java-version: "17"
+        distribution: "temurin"
 
-      - name: Install Dependency Check
-        run: |
-          wget https://github.com/jeremylong/DependencyCheck/releases/download/v10.0.3/dependency-check-10.0.3-release.zip
-          unzip dependency-check-10.0.3-release.zip
-          mv dependency-check /opt/dependency-check
-          chmod +x /opt/dependency-check/bin/dependency-check.sh
-          mkdir -p dep-report
+    - name: Install Dependency Check
+      run: |
+        wget https://github.com/jeremylong/DependencyCheck/releases/download/v10.0.3/dependency-check-10.0.3-release.zip
+        unzip dependency-check-10.0.3-release.zip
+        mv dependency-check /opt/dependency-check
+        chmod +x /opt/dependency-check/bin/dependency-check.sh
+        mkdir -p dep-report
 
-      - name: Run Dependency Check
-        run: |
-          /opt/dependency-check/bin/dependency-check.sh \
-            --project "DevSecOps" \
-            --scan ./ \
-            --format "ALL" \
-            --out dep-report || true
+    - name: Run Dependency Check
+      run: |
+        /opt/dependency-check/bin/dependency-check.sh \
+          --nvdApiKey ${{ secrets.NVD_API_KEY }} \
+          --project "DevSecOps" \
+          --scan ./ \
+          --format "ALL" \
+          --out dep-report || true
 
-      - name: Check Dependency Check results
-        run: |
-          if grep -q "CRITICAL" dep-report/dependency-check-report.html; then
-            echo "❌ Critical dependencies found!"
-            exit 1
-          fi
+    - name: Check Dependency Check results
+      run: |
+        if grep -q "CRITICAL" dep-report/dependency-check-report.html; then
+          echo "❌ Critical dependencies found!"
+          exit 1
+        fi
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: dependency-report
-          path: dep-report
+    - uses: actions/upload-artifact@v4
+      with:
+        name: dependency-report
+        path: dep-report
 
   # 3️⃣ SECRET SCAN - GITLEAKS (100% FIXÉ)
   secrets:
@@ -167,32 +167,58 @@ jobs:
           path: nikto.txt
 
   # 6️⃣ STATIC CODE QUALITY - QODANA
-  qodana:
-    needs: dast
-    runs-on: ubuntu-latest
-    name: "🔍 Qodana"
-    steps:
-      - uses: actions/checkout@v4
+name: Qodana
+on:
+  workflow_dispatch:
+  pull_request:
+  push:
+    branches:
+      - main
+      - 'releases/*'
 
-      - uses: JetBrains/qodana-action@v2024.1.4
+jobs:
+  qodana:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      checks: write
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 0
+
+      - name: 'Qodana Scan'
+        uses: JetBrains/qodana-action@v2025.2
+        with:
+          pr-mode: false
         env:
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
+          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_800884080 }}
+          QODANA_ENDPOINT: 'https://qodana.cloud'
 
   # 7️⃣ FAILURE NOTIFICATION
-  notify_email:
-    needs: [sast, sca, secrets, docker_scan, dast, qodana]
-    if: failure()
-    runs-on: ubuntu-latest
-    name: "📧 Pipeline Failure Email"
-    steps:
-      - name: Send Email
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: smtp.gmail.com
-          server_port: 587
-          username: ${{ secrets.SMTP_USERNAME }}
-          password: ${{ secrets.SMTP_PASSWORD }}
-          subject: "🚨 DevSecOps Pipeline Failed"
-          body: "Un scan de sécurité a échoué. Consulte les logs GitHub Actions."
-          from: ${{ secrets.EMAIL_FROM }}
-          to: ${{ secrets.EMAIL_TO }}
+notify_email:
+  needs: [sast, sca, secrets, docker_scan, dast, qodana]
+  if: failure()
+  runs-on: ubuntu-latest
+  name: "📧 Pipeline Failure Email"
+  steps:
+    - name: Send Email
+      uses: dawidd6/action-send-mail@v3
+      with:
+        server_address: smtp.gmail.com
+        server_port: 587
+        username: ${{ secrets.SMTP_USERNAME }}
+        password: ${{ secrets.SMTP_PASSWORD }}
+        subject: "🚨 DevSecOps Pipeline Failed"
+        body: |
+          ⚠️ Un scan de sécurité a échoué dans la pipeline DevSecOps.
+
+          Consulte les logs GitHub Actions pour plus de détails :
+          https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+          — DevSecOps Automated Security System
+        from: ${{ secrets.EMAIL_FROM }}
+        to: ${{ secrets.EMAIL_TO }}
