--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -1,4 +1,3 @@
-
 name: "🔐 DevSecOps - Full Security Pipeline"
 
 on:
@@ -12,10 +11,14 @@ permissions:
   contents: read
   actions: write
   security-events: write
+  pull-requests: write
+  checks: write
 
 jobs:
 
-  # 1️⃣ SAST - SEMGREP
+  #----------------------------------------------------
+  # 1) SAST — SEMGREP
+  #----------------------------------------------------
   sast:
     name: "🔍 SAST - Semgrep"
     runs-on: ubuntu-latest
@@ -27,8 +30,10 @@ jobs:
 
       - name: Run Semgrep
         run: |
-            semgrep --config=.semgrep/java-security-rules.yml --json -o semgrep.json || true
-      - name: Check Semgrep results
+          semgrep --config=.semgrep/java-security-rules.yml \
+                  --json -o semgrep.json || true
+
+      - name: Check Semgrep findings
         run: |
           if grep -q '"check_id"' semgrep.json; then
             echo "❌ Semgrep vulnerabilities found!"
@@ -40,53 +45,61 @@ jobs:
           name: semgrep-report
           path: semgrep.json
 
-  # 2️⃣ SCA - DEPENDENCY CHECK
-sca:
-  needs: sast
-  runs-on: ubuntu-latest
-  name: "🧩 SCA - Dependency Check"
-  steps:
-    - uses: actions/checkout@v4
 
-    - uses: actions/setup-java@v4
-      with:
-        java-version: "17"
-        distribution: "temurin"
+  #----------------------------------------------------
+  # 2) SCA — DEPENDENCY CHECK
+  #----------------------------------------------------
+  sca:
+    needs: sast
+    name: "🧩 SCA - Dependency Check"
+    runs-on: ubuntu-latest
 
-    - name: Install Dependency Check
-      run: |
-        wget https://github.com/jeremylong/DependencyCheck/releases/download/v10.0.3/dependency-check-10.0.3-release.zip
-        unzip dependency-check-10.0.3-release.zip
-        mv dependency-check /opt/dependency-check
-        chmod +x /opt/dependency-check/bin/dependency-check.sh
-        mkdir -p dep-report
+    steps:
+      - uses: actions/checkout@v4
 
-    - name: Run Dependency Check
-      run: |
-        /opt/dependency-check/bin/dependency-check.sh \
-          --nvdApiKey ${{ secrets.NVD_API_KEY }} \
-          --project "DevSecOps" \
-          --scan ./ \
-          --format "ALL" \
-          --out dep-report || true
+      - uses: actions/setup-java@v4
+        with:
+          java-version: "17"
+          distribution: "temurin"
 
-    - name: Check Dependency Check results
-      run: |
-        if grep -q "CRITICAL" dep-report/dependency-check-report.html; then
-          echo "❌ Critical dependencies found!"
-          exit 1
-        fi
+      - name: Install Dependency Check
+        run: |
+          wget https://github.com/jeremylong/DependencyCheck/releases/download/v10.0.3/dependency-check-10.0.3-release.zip
+          unzip dependency-check-10.0.3-release.zip
+          mv dependency-check /opt/dependency-check
+          chmod +x /opt/dependency-check/bin/dependency-check.sh
+          mkdir -p dep-report
 
-    - uses: actions/upload-artifact@v4
-      with:
-        name: dependency-report
-        path: dep-report
+      - name: Run Dependency Check
+        run: |
+          /opt/dependency-check/bin/dependency-check.sh \
+            --nvdApiKey ${{ secrets.NVD_API_KEY }} \
+            --project "DevSecOps" \
+            --scan ./ \
+            --format "ALL" \
+            --out dep-report || true
 
-  # 3️⃣ SECRET SCAN - GITLEAKS (100% FIXÉ)
+      - name: Fail on CRITICAL vulnerabilities
+        run: |
+          if grep -q "CRITICAL" dep-report/dependency-check-report.html; then
+            echo "❌ Critical dependencies found!"
+            exit 1
+          fi
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: dependency-report
+          path: dep-report
+
+
+  #----------------------------------------------------
+  # 3) SECRETS SCAN — GITLEAKS
+  #----------------------------------------------------
   secrets:
     needs: sca
+    name: "🔒 Secrets Scan - Gitleaks"
     runs-on: ubuntu-latest
-    name: "🔒 Secret Scan - Gitleaks"
+
     steps:
       - uses: actions/checkout@v4
 
@@ -95,12 +108,11 @@ sca:
 
       - name: Run Gitleaks
         run: |
-          gitleaks detect \
-            --source . \
-            --report-format json \
-            --report-path gitleaks.json || true
+          gitleaks detect --source . \
+          --report-format json \
+          --report-path gitleaks.json || true
 
-      - name: Check for secrets
+      - name: Fail on secrets found
         run: |
           if grep -q '"Description"' gitleaks.json; then
             echo "❌ Secrets detected!"
@@ -112,20 +124,23 @@ sca:
           name: gitleaks-report
           path: gitleaks.json
 
-  # 4️⃣ DOCKER SCAN - TRIVY
+
+  #----------------------------------------------------
+  # 4) DOCKER — TRIVY SCAN
+  #----------------------------------------------------
   docker_scan:
     needs: secrets
+    name: "🐳 Trivy Docker Scan"
     runs-on: ubuntu-latest
-    name: "🐳 Docker Scan - Trivy"
+
     steps:
       - uses: actions/checkout@v4
-
       - uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image
+      - name: Build Docker Image
         run: docker build -t devsecops:latest .
 
-      - name: Scan image with Trivy
+      - name: Run Trivy Scan
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: "devsecops:latest"
@@ -133,10 +148,10 @@ sca:
           output: "trivy.json"
           exit-code: "0"
 
-      - name: Check Trivy results
+      - name: Fail on CRITICAL Trivy findings
         run: |
           if grep -q "CRITICAL" trivy.json; then
-            echo "❌ Critical vulnerabilities in Docker image!"
+            echo "❌ Critical Docker vulnerabilities detected!"
             exit 1
           fi
 
@@ -145,80 +160,72 @@ sca:
           name: trivy-report
           path: trivy.json
 
-  # 5️⃣ DAST - NIKTO
+
+  #----------------------------------------------------
+  # 5) DAST — NIKTO
+  #----------------------------------------------------
   dast:
     needs: docker_scan
+    name: "🌐 DAST - Nikto Scan"
     runs-on: ubuntu-latest
-    name: "🌐 DAST - Nikto"
+
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Nikto
+      - name: Run Nikto scan
         run: |
           sudo apt update -qq
           sudo apt install -y nikto
-
-      - name: Run Nikto
-        run: nikto -h http://testphp.vulnweb.com -o nikto.txt
+          nikto -h http://testphp.vulnweb.com -o nikto.txt
 
       - uses: actions/upload-artifact@v4
         with:
           name: nikto-report
           path: nikto.txt
 
-  # 6️⃣ STATIC CODE QUALITY - QODANA
-name: Qodana
-on:
-  workflow_dispatch:
-  pull_request:
-  push:
-    branches:
-      - main
-      - 'releases/*'
 
-jobs:
+  #----------------------------------------------------
+  # 6) QODANA — CODE QUALITY
+  #----------------------------------------------------
   qodana:
+    needs: dast
+    name: "🔍 Qodana Cloud"
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
-      checks: write
 
     steps:
-      - uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
-          fetch-depth: 0
+      - uses: actions/checkout@v4
 
-      - name: 'Qodana Scan'
+      - name: Run Qodana
         uses: JetBrains/qodana-action@v2025.2
-        with:
-          pr-mode: false
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_800884080 }}
-          QODANA_ENDPOINT: 'https://qodana.cloud'
+          QODANA_ENDPOINT: "https://qodana.cloud"
 
-  # 7️⃣ FAILURE NOTIFICATION
-notify_email:
-  needs: [sast, sca, secrets, docker_scan, dast, qodana]
-  if: failure()
-  runs-on: ubuntu-latest
-  name: "📧 Pipeline Failure Email"
-  steps:
-    - name: Send Email
-      uses: dawidd6/action-send-mail@v3
-      with:
-        server_address: smtp.gmail.com
-        server_port: 587
-        username: ${{ secrets.SMTP_USERNAME }}
-        password: ${{ secrets.SMTP_PASSWORD }}
-        subject: "🚨 DevSecOps Pipeline Failed"
-        body: |
-          ⚠️ Un scan de sécurité a échoué dans la pipeline DevSecOps.
 
-          Consulte les logs GitHub Actions pour plus de détails :
-          https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+  #----------------------------------------------------
+  # 7) NOTIFICATION — EMAIL ON FAILURE
+  #----------------------------------------------------
+  notify_email:
+    needs: [sast, sca, secrets, docker_scan, dast, qodana]
+    if: failure()
+    runs-on: ubuntu-latest
+    name: "📧 Pipeline Failure Email"
 
-          — DevSecOps Automated Security System
-        from: ${{ secrets.EMAIL_FROM }}
-        to: ${{ secrets.EMAIL_TO }}
+    steps:
+      - name: Send Email
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 587
+          username: ${{ secrets.SMTP_USERNAME }}
+          password: ${{ secrets.SMTP_PASSWORD }}
+          subject: "🚨 DevSecOps Pipeline Failed"
+          body: |
+            ⚠️ Un scan de sécurité a échoué dans la pipeline DevSecOps.
+
+            Consulte les logs GitHub Actions :
+            https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+            — DevSecOps Automated Security System
+          from: ${{ secrets.EMAIL_FROM }}
+          to: ${{ secrets.EMAIL_TO }}
