--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -1,4 +1,4 @@
-name: "🔐 DevSecOps - Full Security Pipeline"
+kkkname: "🔐 DevSecOps - Full Security Pipeline"
 
 on:
   push:
@@ -49,47 +49,47 @@ jobs:
   #----------------------------------------------------
   # 2) SCA — DEPENDENCY CHECK
   #----------------------------------------------------
-sca:
-  needs: sast
-  name: "🧩 SCA - Dependency Check"
-  runs-on: ubuntu-latest
+  sca:
+    needs: sast
+    name: "🧩 SCA - Dependency Check"
+    runs-on: ubuntu-latest
 
-  steps:
-    - uses: actions/checkout@v4
+    steps:
+      - uses: actions/checkout@v4
 
-    - uses: actions/setup-java@v4
-      with:
-        java-version: "17"
-        distribution: "temurin"
+      - uses: actions/setup-java@v4
+        with:
+          java-version: "17"
+          distribution: "temurin"
 
-    - name: Install Dependency Check
-      run: |
-        wget https://github.com/jeremylong/DependencyCheck/releases/download/v10.0.3/dependency-check-10.0.3-release.zip
-        unzip dependency-check-10.0.3-release.zip
-        mv dependency-check /opt/dependency-check
-        chmod +x /opt/dependency-check/bin/dependency-check.sh
-        mkdir -p ${{ github.workspace }}/dep-report
+      - name: Install Dependency Check
+        run: |
+          wget https://github.com/jeremylong/DependencyCheck/releases/download/v10.0.3/dependency-check-10.0.3-release.zip
+          unzip dependency-check-10.0.3-release.zip
+          mv dependency-check /opt/dependency-check
+          chmod +x /opt/dependency-check/bin/dependency-check.sh
+          mkdir -p ${{ github.workspace }}/dep-report
 
-    - name: Run Dependency Check
-      run: |
-        /opt/dependency-check/bin/dependency-check.sh \
-          --nvdApiKey ${{ secrets.NVD_API_KEY }} \
-          --project "DevSecOps" \
-          --scan ./ \
-          --format "ALL" \
-          --out ${{ github.workspace }}/dep-report || true
+      - name: Run Dependency Check
+        run: |
+          /opt/dependency-check/bin/dependency-check.sh \
+            --nvdApiKey ${{ secrets.NVD_API_KEY }} \
+            --project "DevSecOps" \
+            --scan ./ \
+            --format "ALL" \
+            --out ${{ github.workspace }}/dep-report || true
 
-    - name: Check CRITICAL findings
-      run: |
-        if grep -q "CRITICAL" ${{ github.workspace }}/dep-report/dependency-check-report.html; then
-          echo "❌ Critical dependencies found!"
-          exit 1
-        fi
+      - name: Check CRITICAL findings
+        run: |
+          if grep -q "CRITICAL" ${{ github.workspace }}/dep-report/dependency-check-report.html; then
+            echo "❌ Critical dependencies found!"
+            exit 1
+          fi
 
-    - uses: actions/upload-artifact@v4
-      with:
-        name: dependency-report
-        path: ${{ github.workspace }}/dep-report
+      - uses: actions/upload-artifact@v4
+        with:
+          name: dependency-report
+          path: ${{ github.workspace }}/dep-report
 
 
   #----------------------------------------------------
@@ -103,14 +103,10 @@ sca:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Gitleaks
-        uses: gitleaks/gitleaks-action@v2
-
       - name: Run Gitleaks
-        run: |
-          gitleaks detect --source . \
-          --report-format json \
-          --report-path gitleaks.json || true
+        uses: gitleaks/gitleaks-action@v2
+        with:
+          args: detect --source . --report-format json --report-path gitleaks.json || true
 
       - name: Fail on secrets found
         run: |
@@ -148,7 +144,7 @@ sca:
           output: "trivy.json"
           exit-code: "0"
 
-      - name: Fail on CRITICAL Trivy findings
+      - name: Fail on CRITICAL Docker findings
         run: |
           if grep -q "CRITICAL" trivy.json; then
             echo "❌ Critical Docker vulnerabilities detected!"
@@ -185,7 +181,7 @@ sca:
 
 
   #----------------------------------------------------
-  # 6) QODANA — CODE QUALITY
+  # 6) QODANA — CLOUD SCAN
   #----------------------------------------------------
   qodana:
     needs: dast
@@ -203,7 +199,7 @@ sca:
 
 
   #----------------------------------------------------
-  # 7) NOTIFICATION — EMAIL ON FAILURE
+  # 7) EMAIL NOTIFICATION ON FAILURE
   #----------------------------------------------------
   notify_email:
     needs: [sast, sca, secrets, docker_scan, dast, qodana]
@@ -229,3 +225,4 @@ sca:
             — DevSecOps Automated Security System
           from: ${{ secrets.EMAIL_FROM }}
           to: ${{ secrets.EMAIL_TO }}
+
