--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -17,11 +17,12 @@ permissions:
 jobs:
 
   #----------------------------------------------------
-  # 1) SEMGREP
+  # 1) SAST — SEMGREP
   #----------------------------------------------------
   sast:
     name: "🔍 SAST - Semgrep"
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
@@ -33,7 +34,7 @@ jobs:
           semgrep --config=.semgrep/java-security-rules.yml \
                   --json -o semgrep.json || true
 
-      - name: Check Semgrep findings
+      - name: Fail if vulnerabilities detected
         run: |
           if grep -q '"check_id"' semgrep.json; then
             echo "❌ Semgrep vulnerabilities found!"
@@ -41,21 +42,22 @@ jobs:
           fi
 
       - uses: actions/upload-artifact@v4
+        if: hashFiles('semgrep.json') != ''
         with:
           name: semgrep-report
           path: semgrep.json
-
 
   #----------------------------------------------------
   # 2) SCA — DEPENDENCY CHECK
   #----------------------------------------------------
   sca:
-    needs: sast
     name: "🧩 SCA - Dependency Check"
+    needs: sast
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-java@v4
         with:
           java-version: "17"
@@ -74,40 +76,48 @@ jobs:
           /opt/dependency-check/bin/dependency-check.sh \
             --nvdApiKey ${{ secrets.NVD_API_KEY }} \
             --project "DevSecOps" \
-            --scan "." \
+            --scan ./ \
             --format "ALL" \
-            --out "dep-report" || true
+            --out dep-report || true
 
-      - name: Check CRITICAL Dependencies
+      - name: Fail on critical findings
         run: |
-          if test -f dep-report/dependency-check-report.html && grep -q "CRITICAL" dep-report/dependency-check-report.html ; then
+          if [ -f dep-report/dependency-check-report.html ] && grep -q "CRITICAL" dep-report/dependency-check-report.html; then
             echo "❌ Critical dependencies found!"
             exit 1
           fi
 
       - uses: actions/upload-artifact@v4
+        if: hashFiles('dep-report/*') != ''
         with:
           name: dependency-report
           path: dep-report
 
-
   #----------------------------------------------------
-  # 3) SECRETS — GITLEAKS
+  # 3) SECRETS SCAN — GITLEAKS (CLI version)
   #----------------------------------------------------
   secrets:
-    needs: sca
     name: "🔒 Secrets Scan - Gitleaks"
+    needs: sca
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Run Gitleaks
-        uses: gitleaks/gitleaks-action@v1
-        with:
-          args: "--report-path=gitleaks.json --report-format=json --path=."
+      - name: Install Gitleaks CLI
+        run: |
+          curl -s https://api.github.com/repos/gitleaks/gitleaks/releases/latest \
+          | grep "gitleaks-linux-amd64" | cut -d '"' -f 4 | wget -qi -
+          mv gitleaks-linux-amd64 gitleaks
+          chmod +x gitleaks
 
-      - name: Fail on secrets found
+      - name: Run Gitleaks
+        run: |
+          ./gitleaks detect --source . \
+          --report-path=gitleaks.json \
+          --report-format=json || true
+
+      - name: Fail if secrets found
         run: |
           if grep -q '"Description"' gitleaks.json; then
             echo "❌ Secrets detected!"
@@ -115,17 +125,17 @@ jobs:
           fi
 
       - uses: actions/upload-artifact@v4
+        if: hashFiles('gitleaks.json') != ''
         with:
           name: gitleaks-report
           path: gitleaks.json
 
-
   #----------------------------------------------------
-  # 4) TRIVY — DOCKER
+  # 4) DOCKER — TRIVY SCAN
   #----------------------------------------------------
   docker_scan:
+    name: "🐳 Docker Scan - Trivy"
     needs: secrets
-    name: "🐳 Trivy Docker Scan"
     runs-on: ubuntu-latest
 
     steps:
@@ -135,7 +145,7 @@ jobs:
       - name: Build Docker Image
         run: docker build -t devsecops:latest .
 
-      - name: Run Trivy Scan
+      - name: Run Trivy
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: "devsecops:latest"
@@ -143,25 +153,25 @@ jobs:
           output: "trivy.json"
           exit-code: "0"
 
-      - name: Fail on CRITICAL findings
+      - name: Fail on critical findings
         run: |
           if grep -q "CRITICAL" trivy.json; then
-            echo "❌ Critical vulnerabilities detected!"
+            echo "❌ Critical Docker vulnerabilities detected!"
             exit 1
           fi
 
       - uses: actions/upload-artifact@v4
+        if: hashFiles('trivy.json') != ''
         with:
           name: trivy-report
           path: trivy.json
-
 
   #----------------------------------------------------
   # 5) DAST — NIKTO
   #----------------------------------------------------
   dast:
+    name: "🌐 DAST - Nikto"
     needs: docker_scan
-    name: "🌐 DAST - Nikto Scan"
     runs-on: ubuntu-latest
 
     steps:
@@ -174,36 +184,34 @@ jobs:
           nikto -h http://testphp.vulnweb.com -o nikto.txt
 
       - uses: actions/upload-artifact@v4
+        if: hashFiles('nikto.txt') != ''
         with:
           name: nikto-report
           path: nikto.txt
-
 
   #----------------------------------------------------
   # 6) QODANA
   #----------------------------------------------------
   qodana:
-    needs: dast
     name: "🔍 Qodana Cloud"
+    needs: dast
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Run Qodana
-        uses: JetBrains/qodana-action@v2025.2
+      - uses: JetBrains/qodana-action@v2025.2
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_800884080 }}
           QODANA_ENDPOINT: "https://qodana.cloud"
-
 
   #----------------------------------------------------
   # 7) EMAIL NOTIFICATION
   #----------------------------------------------------
   notify_email:
+    name: "📧 Pipeline Failure Email"
     needs: [sast, sca, secrets, docker_scan, dast, qodana]
     if: failure()
-    name: "📧 Pipeline Failure Email"
     runs-on: ubuntu-latest
 
     steps:
@@ -216,9 +224,11 @@ jobs:
           password: ${{ secrets.SMTP_PASSWORD }}
           subject: "🚨 DevSecOps Pipeline Failed"
           body: |
-            ⚠️ Un scan a échoué dans la pipeline DevSecOps.
-            Consulte les logs ici :
+            ⚠️ Un scan de sécurité a échoué dans la pipeline DevSecOps.
+
+            Consulte les logs GitHub Actions :
             https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+            — DevSecOps Automated Security System
           from: ${{ secrets.EMAIL_FROM }}
           to: ${{ secrets.EMAIL_TO }}
-
