Fix duplicate AppTest.java

--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -17,7 +17,7 @@ permissions:
 jobs:
 
   #----------------------------------------------------
-  # 1) SAST — SEMGREP
+  # 1) SAST — SEMGREP 1) SAST — SEMGREP
   #----------------------------------------------------
   sast:
     name: "🔍 SAST - Semgrep"
